--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -267,7 +267,7 @@
     @media (max-width: 768px) {
       flex-direction: column;
     }
-    @media (min-width: 769px) and (max-width: 1200px) {
+    @media (min-width: 769px) and (max-width: 1000px) {
       flex-wrap: wrap;
     }
     
@@ -291,13 +291,19 @@
     border: none;
     border-right: 1px solid $footer-font-black;
     color: $footer-font-black;
+    background-color: #fff;
     padding: calculateRem(20) calculateRem(15);
     flex-grow: 1;
     font-family: $font-family-Roboto;
     font-size: $font-size-very-small;
     text-transform: uppercase;
-    @media (min-width: 769px) and (max-width: 1200px) {
+    @media (min-width: 769px) and (max-width: 1000px) {
       flex-basis: 50%;
+    }
+    &:not(:last-child) {
+      @media (max-width: 1000px) {
+        border-bottom: 1px solid $footer-font-black;
+      }
     }
   }
 }
@@ -305,6 +311,10 @@
   background: url("../img/sprite/magnifying-glass.svg") no-repeat;
   background-size: 20px 20px;
   background-position: 95% 50%;
+  @media (max-width: 1000px) {
+    border-right: 1px solid $footer-font-black;
+    border-left: 1px solid $footer-font-black;
+  }
 }
 .select-block {
   border-bottom: 1px solid $footer-font-black;
