--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,5 +1,115 @@
-.footer {
+.footer { 
   background-color: $footer-background;
+  &_list {
+    &--item {
+      &:not(:last-child) {
+        margin-bottom: 10px;
+      } 
+    }
+    
+    &--link, &--discr {
+      font-size: $font-size-very-small;
+      font-family: $font-family-Roboto;
+      line-height: 15px;
+      transition: .2s linear;
+    }
+    &--link:hover {
+      border-bottom: 1px solid black;
+      transition: .2s linear;
+      cursor: pointer;
+    }
+  
+  }
+  &_block {
+    @media (max-width: 480px) {
+      width: 80%;
+      margin-bottom: calculateRem(40);
+      text-align: center;
+    }
+    @media (min-width: 481px) and (max-width: 768px) {
+      flex-basis: 35%;
+      margin-bottom: calculateRem(40);
+    }
+    &:nth-child(-n+3) {
+      @media (min-width: 769px) and (max-width: 1000px) {
+        margin-bottom: calculateRem(40);
+      }
+    }
+    @media (min-width: 769px) and (max-width: 1000px) {
+      flex-basis: 30%;
+    }
+    width: 17%;
+    & > h3 {
+      margin-bottom: calculateRem(41);
+    }
+   &:nth-child(2){
+    @media (min-width: 769px) and (max-width: 1000px) {
+      flex-basis: 18%;
+    }
+    @media (max-width: 480px) {
+      width: 80%;
+
+    }
+     width: 8%;
+   }
+   &--head {
+    font-family: $font-family-Roboto;
+    font-size: calculateRem(18);
+    text-transform: uppercase;
+    font-weight: 400;
+    line-height: 28px;
+  }
+  &--logo {
+    font-size: calculateRem(28);
+    font-family: "CormorantUnicase-Bold", Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    font-weight: 400;
+  }
+  &--news {
+    font-size: $font-size-very-small;
+    font-family: $font-family-Roboto;
+    line-height: 15px;
+    margin-bottom: calculateRem(25);
+  }
+  &--svg-box {
+    display: flex;
+    justify-content: space-between;
+    > a > svg:hover {
+      fill: $font-color-red;
+      transition: .2s linear;
+    }
+  }
+
+  
+   &--btn {
+    background-color: #333333;
+    border: none;
+    cursor: pointer;
+    color: #fff;
+    &.join {
+      padding: 16px 0;
+      border-left: 1px solid $footer-font-black;
+      transition: .2s linear;
+      font-weight: 500;
+      width: calculateRem(150);
+      &:hover {
+        color: $font-color-red;
+        transition: .2s linear;
+      }
+    }
+    &.plane {
+      fill: #fff;
+      transition: .2s linear;
+      &:hover {
+        fill: $font-color-red;
+        transition: .2s linear;
+      }
+    }
+  }
+   &:nth-child(5) > p {
+     margin-bottom: calculateRem(25);
+   }
+  }
   & .wrapper {
     padding: calculateRem(105) 0 calculateRem(75) 0;
   }
@@ -11,95 +121,6 @@
       text-align: center;
     }
   }
-  &__box {
-    @media (min-width: 481px) and (max-width: 1000px) {
-      flex-basis: 30%;
-      
-    }
-    &:not(:nth-child(n+4)) {
-      @media (min-width: 769px) and (max-width: 1000px) { 
-        margin-bottom: calculateRem(30);
-      }
-    }
-    flex-basis: 20%;
-  &:not(:last-child) {
-    @media (max-width: 768px) {
-      margin-bottom: calculateRem(30);
-  
-    }
-  }  
-    &--head {
-      font-family: $font-family-Roboto;
-      font-size: calculateRem(18);
-      text-transform: uppercase;
-      font-weight: 400;
-      line-height: 28px;
-    }
-    &--logo {
-      font-size: calculateRem(28);
-      font-family: "CormorantUnicase-Bold", Arial, Helvetica, sans-serif;
-      text-transform: uppercase;
-      font-weight: 400;
-    }
-    &--item {
-      width: 70%;
-      @media (max-width: 480px) {
-        width: 100%;
-        text-align: center;
-      }
-      &:not(:last-child) {
-        margin-bottom: 10px;
-
-      }
-    
-      &:first-child {
-        margin-bottom: calculateRem(41);
-      }
-      @media (max-width: 480px) {
-        text-align: center;
-      }
-      
-    }
-    
-    &--link, &--discr {
-      font-size: $font-size-very-small;
-      font-family: $font-family-Roboto;
-      line-height: 15px;
-      transition: .2s linear;
-      
-    }
-    &--link:hover {
-      border-bottom: 1px solid black;
-      transition: .2s linear;
-      cursor: pointer;
-    }
-    &--btn {
-      background-color: #333333;
-      border: none;
-      cursor: pointer;
-      color: #fff;
-      
-      &.join {
-        padding: 16px 36px;
-        border-left: 1px solid $footer-font-black;
-        transition: .2s linear;
-        font-weight: 500;
-        &:hover {
-          color: $font-color-red;
-          transition: .2s linear;
-        }
-      }
-      &.plane {
-        fill: #fff;
-        transition: .2s linear;
-        &:hover {
-          fill: $font-color-red;
-          transition: .2s linear;
-        }
-      }
-    }
-  }
-  
   &__flex {
     display: flex;
     justify-content: space-between;
@@ -107,42 +128,14 @@
       flex-direction: column;
       align-items: center;
     }
-    @media (min-width: 481px) and (max-width: 768px) {
-      flex-direction: row;
+    @media (min-width: 481px) {
       flex-wrap: wrap;
     }
-    @media (min-width: 769px) and (max-width: 1000px) {
-      flex-wrap: wrap;
-    }
-    
   }
 }
-.foo__btn {
+.foo_btn {
   display: flex;
-  @media (max-width: 768px) {
+  @media (max-width: 480px) {
     justify-content: center;
   }
-}
-.footer__box:nth-child(2) {
-  @media (min-width: 481px) and (max-width: 768px) {
-    flex-basis: 30%;
-  }
-}
-.footer__box:nth-child(2){
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  @media (max-width: 480px) {
-    align-items: unset;
-  }
-}
-.footer__box:nth-child(4) > a:not(:last-child) {
-  margin-right: 20px;
-}
-.footer__box:nth-child(4) > a:hover svg{
-  fill: $font-color-red;
-  transition: .2s linear;
-}
-.footer__box:nth-child(5) li > p {
-  margin-bottom: calculateRem(25);
 }
