--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -2,7 +2,9 @@
   max-width: 83.3333%;
   margin: 0 auto;
 }
-
+body {
+  min-width: 320px;
+}
 .list {
   list-style: none;
   margin: 0;
@@ -274,22 +276,26 @@
   }
 
   &__select-reset {
-    border-bottom: 2px solid $font-color-main;
+
     color: $footer-font-black;
     padding-bottom: calculateRem(15);
     font-family: $font-family-Roboto;
     font-size: $font-size-very-small;
     transition: 0.2s linear;
     &:hover {
-      color: $font-color-red;
-      border-bottom: 2px solid $font-color-red;
+      border-bottom: 2px solid $font-color-main;
       transition: 0.2s linear;
     }
   }
 
   &__select {
-    border: none;
-    border-right: 1px solid $footer-font-black;
+    border: 1px solid $footer-font-black;
+    border-bottom: transparent;
+    &:not(:last-child) {
+      @media (min-width: 1000px) {
+        border-right: transparent;
+      }
+    }
     color: $footer-font-black;
     background-color: #fff;
     padding: calculateRem(20) calculateRem(15);
@@ -297,26 +303,28 @@
     font-family: $font-family-Roboto;
     font-size: $font-size-very-small;
     text-transform: uppercase;
+    
     @media (min-width: 769px) and (max-width: 1000px) {
       flex-basis: 50%;
     }
-    &:not(:last-child) {
-      @media (max-width: 1000px) {
-        border-bottom: 1px solid $footer-font-black;
-      }
-    }
+
   }
 }
 .search-input {
   background: url("../img/sprite/magnifying-glass.svg") no-repeat;
   background-size: 20px 20px;
   background-position: 95% 50%;
-  @media (max-width: 1000px) {
-    border-right: 1px solid $footer-font-black;
-    border-left: 1px solid $footer-font-black;
-  }
 }
 .select-block {
   border-bottom: 1px solid $footer-font-black;
   margin-bottom: calculateRem(40);
+  &:after {
+    display: block;
+    height: 1px;
+    background-color: $footer-font-black;
+    content: "";
+    width: 100%;
+    position: absolute;
+    left: 0;
+  }
 }
